--- a/blog/templates/blog/post_delete.html
+++ b/blog/templates/blog/post_delete.html
@@ -5,6 +5,11 @@
     <title>Title</title>
 </head>
 <body>
-
+<form action="" method="post">
+    <div class="alert alert-danger">Do you want to delete {{object}}?</div>
+    {% csrf_token %}
+    {{form.as_p}}
+    <input type="submit" value="Delete Confirm" class="btn btn-outline-danger">
+</form>
 </body>
 </html>
