--- a/blog/templates/blog/post_delete.html
+++ b/blog/templates/blog/post_delete.html
@@ -1,15 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block title %}
+{% endblock %}
+
+{% block content %}
 <form action="" method="post">
     <div class="alert alert-danger">Do you want to delete {{object}}?</div>
     {% csrf_token %}
     {{form.as_p}}
     <input type="submit" value="Delete Confirm" class="btn btn-outline-danger">
 </form>
-</body>
-</html>
+{% endblock %}
