--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,10 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    {{object.title}}
-</body>
-</html>
+{% extends 'base.html' %}
+{% block title %}
+{% endblock %}
+
+{% block content %}
+    <form action="" method="post">
+    {% csrf_token %}
+    <div class="row">
+        <div class="card-deck">
+            <div class="card" style>
+                <div class="card-body">
+                    <div class="card-title" style="font-style: italic;">
+                        {{object.title}}
+                        <p style="text-align:right">{{object.category.name}}</p>
+                    </div>
+                    <h6 class="text-muted" style ="float-right">{{object.created}}</h6>
+                    <div class="card-footer">
+                    <small class="text-muted">{{object.text|safe}}</small>
+                    </div>
+                    <a href="{% url 'blog:post_update' object.id%}" type="button" class="btn btn-dark">update</a>
+                    <a href="{% url 'blog:post_delete' object.id%}" type="button" class="float-right btn btn-dark">delete</a>
+                </div>
+            </div>
+        <ul class="nav nav-pills">
+    </ul>
+    </div>
+
+</div>
+
+</form>
+{% endblock %}
