--- a/layout/base.html
+++ b/layout/base.html
@@ -20,14 +20,16 @@
       <li class="nav-item active">
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
+        {% if user.is_authenticated %}
+        <li class="nav-item active">
+        <a class="nav-link" href="{% url 'blog:post_create' %}">Post add</a>
+          </li>
+        {% endif %}
     </ul>
 
       <ul class="navbar-nav justify-content-end">
 
       {% if user.is_authenticated %}
-        <li class="nav-item active">
-        <a class="nav-link" href="#">Post add</a>
-          </li>
         <li class="nav-item">
             <a class="nav-link" href="#">Sign-out</a>
         </li>
@@ -41,14 +43,23 @@
         </li>
           {% endif %}
       </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" name="search_key">
-      <a href="#" class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</a>
-    </form>
   </div>
 </nav>
 
-
+<div class="container">
+    {% if messages %}
+    <div class="row">
+        <div class="col"></div>
+        <div class="col-6">
+            {% for message in messages %}
+            <div class="alert alert-{{message.tags}}">{{message}}</div>
+            {% endfor %}
+            <a href="{% url 'blog:index' %}" type="button" class="btn btn-dark" style="float:right">return</a>
+        </div>
+        <div class="col"></div>
+    </div>
+    {% endif %}
+</div>
 
     {% block content %}
 
