--- a/layout/base.html
+++ b/layout/base.html
@@ -9,61 +9,65 @@
 
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand mb-0 h1" href="{% url 'blog:index' %}">Blog</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-        {% if user.is_authenticated %}
-        <li class="nav-item active">
-        <a class="nav-link" href="{% url 'blog:post_create' %}">Post add</a>
-          </li>
-        {% endif %}
-    </ul>
-
-      <ul class="navbar-nav justify-content-end">
-
-      {% if user.is_authenticated %}
-        <li class="nav-item">
-            <a class="nav-link" href="#">Sign-out</a>
-        </li>
-        {% else %}
-        <li class="nav-item">
-            <a class="nav-link" href="#">Sign-in</a>
-        </li>
-
-        <li class="nav-item">
-            <a class="nav-link" href="#">Sign-up</a>
-        </li>
-          {% endif %}
-      </ul>
-  </div>
-</nav>
-
 <div class="container">
-    {% if messages %}
     <div class="row">
         <div class="col"></div>
-        <div class="col-6">
-            {% for message in messages %}
-            <div class="alert alert-{{message.tags}}">{{message}}</div>
-            {% endfor %}
-            <a href="{% url 'blog:index' %}" type="button" class="btn btn-dark" style="float:right">return</a>
+            <div class="col-12">
+                <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                    <a class="navbar-brand mb-0 h1" href="{% url 'blog:index' %}">Blog</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav mr-auto">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                            </li>
+                            {% if user.is_authenticated %}
+                            <li class="nav-item active">
+                                <a class="nav-link" href="{% url 'blog:post_create' %}">Post add</a>
+                            </li>
+                            {% endif %}
+                        </ul>
+                        <ul class="navbar-nav justify-content-end">
+                            {% if user.is_authenticated %}
+                            <span class="navbar-text">
+                                {{user}}님
+                            </span>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'account_logout' %}">로그아웃</a>
+                            </li>
+                            {% else %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'account_signup' %}">회원가입</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'account_login' %}">로그인</a>
+                            </li>
+                            {% endif %}
+                        </ul>
+                    </div>
+                </nav>
+
+                {% if messages %}
+                {% for message in messages %}
+                <div class="alert alert-{{message.tags}}">
+                    {{message}}
+                    <a href="{% url 'blog:index' %}" class="btn btn-outline-dark btn-sm" style="float:right">돌아가기</a>
+                </div>
+                {% endfor %}
+
+                {% endif %}
+
+                {% block content %}
+                {% endblock %}
+            </div>
+            <div class="col"></div>
         </div>
-        <div class="col"></div>
     </div>
-    {% endif %}
-</div>
 
-    {% block content %}
 
-    {% endblock %}
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
