--- a/layout/base.html
+++ b/layout/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
     {% load staticfiles %}
-    <link rel="stylesheet" type="text/css" href="{% static 'blog/style.css' %}"/>
+<!--    <link rel="stylesheet" type="text/css" href="{% static 'blog/style.css' %}"/>-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 </head>
@@ -23,11 +23,7 @@
                             <li class="nav-item active">
                                 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                             </li>
-                            {% if user.is_authenticated %}
-                            <li class="nav-item active">
-                                <a class="nav-link" href="{% url 'blog:post_create' %}">Post add</a>
-                            </li>
-                            {% endif %}
+
                         </ul>
                         <ul class="navbar-nav justify-content-end">
                             {% if user.is_authenticated %}
