--- a/layout/base.html
+++ b/layout/base.html
@@ -9,10 +9,13 @@
 
 </head>
 <body>
+
 <div class="container">
     <div class="row">
         <div class="col"></div>
             <div class="col-12">
+                {% load staticfiles %}
+                <img src="{% static 'blog/images/git.png' %}" class="img-fluid mx-auto d-block" alt="Responsive image">
                 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                     <a class="navbar-brand mb-0 h1" href="{% url 'blog:index' %}">Blog</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,7 +47,6 @@
                         </ul>
                     </div>
                 </nav>
-
                 {% if messages %}
                 {% for message in messages %}
                 <div class="alert alert-{{message.tags}}">
